--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "pinia": "^2.0.14",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14"
   },
