--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.9",
+    "postcss-import": "^14.1.0",
     "sass": "^1.49.11",
     "vite": "^2.9.1"
   }
